2_RessourcesIstio/2.2_Routing/catalog-virtualservice-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: version-v1
    mirror:
      host: catalog
      subset: version-v2
