2_RessourcesIstio/2.2_Routing/catalog-vs-v2-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog-vs-from-gw
spec:
  hosts:
  - "catalog.formation.io"
  gateways:
  - catalog-gateway
  http:
  - route:
    - destination:
        host: catalog
        subset: version-v2
    weight: 10
  - route:
    - destination:
        host: catalog
        subset: version-v1
    weight: 90
